--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,8 @@
 		<commons.beanutils.version>1.7.0</commons.beanutils.version>
 		<commons.configuration.version>1.10</commons.configuration.version>
 		<commons.email.version>1.5</commons.email.version>
-		<poi.version>3.17</poi.version>
+		<poi.version>4.1.2</poi.version>
+		<zip4j.version>2.5.2</zip4j.version>
 		<freemarker.version>2.3.21</freemarker.version>
 		<javax.servlet.api.version>3.1.0</javax.servlet.api.version>
 		<commons.collections4.version>4.1</commons.collections4.version>
@@ -293,6 +294,11 @@
 				<artifactId>jackson-core</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.dataformat</groupId>
+				<artifactId>jackson-dataformat-csv</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>junit</groupId>
@@ -373,6 +379,12 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
 				<version>${poi.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>net.lingala.zip4j</groupId>
+				<artifactId>zip4j</artifactId>
+				<version>${zip4j.version}</version>
 			</dependency>
 
 			<dependency>
@@ -692,7 +704,7 @@
 	</build>
 
 	<modules>
-		<module>dolphinscheduler-ui</module>
+<!--		<module>dolphinscheduler-ui</module>-->
 		<module>dolphinscheduler-server</module>
 		<module>dolphinscheduler-common</module>
 		<module>dolphinscheduler-api</module>
